--- a/block1.css
+++ b/block1.css
@@ -247,7 +247,7 @@
 
 .first-second .krug2{
  position: absolute;
- background-color: #051E47;
+ background-color: #082D6A;
  width: 600px;
  height: 600px;
  left:130px;
